--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,37 @@ Dark grey:      #999999;
   width: 95%;
 }
 
+
 .devs {
 	background-color: #C6C6C6;
+}
+
+a:hover {
+		font-weight: 900;
+}
+
+li:hover {
+	font-weight: 900;
+}
+
+.fixed {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
+  overflow-y: auto;
+}
+
+.relative {
+  position: relative;
+  top: 120px;
+}
+
+.absolute {
+  position: absolute;
+  bottom: 100px;
+  top: 120;
+  
 }
 
 
@@ -70,8 +99,9 @@ GENERAL STYLES
 *********************************/
 
 html {
-	font-size: 20px;
+	font-size: 20px; 
 }
+
 
 a {
 	text-decoration: none;
@@ -89,7 +119,7 @@ grows to 100% width of parent*/
 	color: #000;
 	display: block;
 	text-align: center;
-	padding: 10px 0 20px;
+	padding: 20px 0 20px;
 }
 
 /********************************
@@ -140,6 +170,14 @@ header li:last-child {
 header a {
 	color: #fff; 
 }
+
+.box h4 {
+	margin-left: 10px;
+	margin-bottom: 10px;
+	font-weight: 300;
+	font-size: 25px;
+}
+
 
 /********************************
 HEADER STYLES ENDS
@@ -230,6 +268,11 @@ CTA Styling
 	border-bottom: 3px solid #999999;
 }
 
+.contact {
+	border-bottom: 3px solid #999999;
+	border-radius: 5px;
+}
+
 /********************************
 CTA Styling ENDS
 *********************************/
@@ -281,6 +324,10 @@ footer {
 	padding: 20px 0;
 }
 
+/**********************************
+DEV PAGE STYLING
+************************************/
+
 .img {
   background-color: #C6C6C6;
   padding: 50% 0;
@@ -288,6 +335,7 @@ footer {
   display: block;
   margin: 10px;
   text-align: center;
+  color: #999999;
 }
 
 h4 {
@@ -298,12 +346,21 @@ margin-left: 20px;
   padding-left: 0;
 }
 
+.profiles li:first-child {
+	margin-left: 0;
+}
+
+.profiles li:last-child {
+	margin-right: 0;
+}
+
 .profiles li {
   list-style: none;
   display: inline-block;
-  width: 23.6%;
-  margin: 0 .8%;
+  width: 23%;
+  margin: .5% .5%;
   background-color: white;
+  padding: 10px;
 
 }
 
@@ -311,20 +368,24 @@ margin-left: 20px;
  border: none;
  display: inline;
  margin: 20px auto 20px 10px;
- background-color: purple;
+ background-color: #696969;
  color: white;
- padding: 5px 15px 5px 15px;
+ padding: 5px  15px;
  border-radius: 50px;
+ font-size: 15px;
 }
 
 .skills li:first-child {
-  margin-left: 15px;
+  margin-left: 0;
+}
+
+ul .skills {
+	padding-left: 10px;
 }
 
 
-
 /******************************
-STYLING Boxes
+DEV PAGE STLYING	
 ******************************
-*/
+
 
