--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ body {
 }
 
 h1,
+h1 a,
 .teasers_block h2,
 .strapline p {
 	font-family: "Merriweather", sans-serif;
@@ -85,6 +86,11 @@ h4 {
 nav li:nth-child(-n+2) a {
 	font-family: "Oswald", sans-serif;
 	text-transform: uppercase;
+}
+
+nav li:nth-child(-n+2) a {
+	display: block;
+	padding: 10px 15px 20px 15px;
 }
 
 /*******************************
@@ -131,8 +137,12 @@ HEADER STYLES
 header {
 	background-color: #000;
 	color: #FFF653; 
-	padding: 20px 0;
+	padding: 20px 0 0 0;
 	border-bottom: 5px solid #FFF653;
+}
+
+.dev header {
+	padding-bottom: 0;
 }
 
 h1 {
@@ -161,6 +171,10 @@ header li:last-child {
 
 header a {
 	color: #fff; 
+}
+
+h1 a {
+	color: #FFF653;
 }
 
 
@@ -318,10 +332,9 @@ DEV PAGE STYLING
 
 .profiles  {
   padding-left: 0;
+  padding-top: 10px;
 }
 
-.profiles ul {
-}
 
 .profiles li {
   list-style: none;
@@ -344,20 +357,13 @@ figcaption {
 .skills {
 	overflow: hidden;
 	margin-bottom: 10px;
+	padding-left: 0;
 }
 
 .skills li {
-	/*border: 1px solid black;
-	display: inline-block;*/
 	float: left;
     width: auto;
-
-	/*background-color: #696969;
-	padding: 2px  12px;
-	border-radius: 100px;
-	font-size: 15px;
-	color: #000;*/
-
+    padding-left: 0;
 }
 
 .skills li a {
@@ -368,11 +374,6 @@ figcaption {
 	font-size: 15px;
 	color: white;
 	margin-right: 0 5px 5px 0;
-}
-
-
-ul .skills {
-	padding-left: 0px;
 }
 
 .box.col_1 {
